feat: Sprint 3 completo — auth, pedidos, contratos, frontend, Docker, UML v4